# quantiacs

./: .gitignore  README.md  meta.yaml  pyproject.toml  setup.py  strategy_50_50_comparison.ipynb
qnt/: backtester.py  exits.py  exposure.py  optimizer.py  output.py  stats.py
qnt/data/: __init__.py  common.py  id_translation.py  index.py  secgov_fundamental.py  stocks.py
qnt/tests/: test_data_cache.py  test_statistic.py  test_strategy.py
qnt/tests/data/: stats_data.py
results/: comparison.md  strategy_01_results.md  strategy_02_results.md  strategy_03_results.md  strategy_04_results.md  strategy_05_results.md  strategy_06_results.md  strategy_07_results.md
strategies/: GUIDE.md  METHOD_VS_SPY.md  base.py  compare.py  run_all.py  strategy_01_rebalance_10pct.py  strategy_02_buy_hold.py  strategy_03_dynamic_threshold.py  strategy_04_monthly_rebalance.py  strategy_05_ma_timing.py  strategy_06_rebalance_5pct.py  strategy_07_rebalance_20pct.py
